# mono-hildondesktop

./: ChangeLog  Makefile.am  README.md  autogen.sh  configure.ac  libhildondesktop-sharp.snk
debian/: changelog  control  hildon-desktop-mono-loader.install  mono-hildondesktop.install  rules
libhildondesktop/: AppDomainHelper.cs  AssemblyInfo.cs.in  HomeItem.custom  Makefile.am  libhildondesktop-api.raw  libhildondesktop-sharp-sources.xml  libhildondesktop-sharp.dll.config  libhildondesktop-sharp.pc.in  libhildondesktop.metadata
loader/: Makefile.am  hd-plugin-loader-mono.c  hd-plugin-loader-mono.h  hd-plugin-loader-mono.h.in  monoloader.config
loader/libmono_armel/: libmono.so.0.0.0
